--- a/LP.html
+++ b/LP.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bbbbbbbb</title>
+    <title>hhhhhhhh</title>
     <link rel="stylesheet" href="LP.css">
     <link rel="icon" href="https://cdn.discordapp.com/attachments/855789623388798998/1090562035659587614/Logo_Stade_Rennais_FC.svg.png">
 </head>
