--- a/LP.html
+++ b/LP.html
@@ -20,7 +20,7 @@
             <a href="https://billetterie.staderennais.com/matchs/" class="boutonImgBilleterie"><img src="https://media.discordapp.net/attachments/855789623388798998/1095343215198077018/billeterie.png?width=162&height=62"></a>
             <img class="staderennaisfc" src="https://media.discordapp.net/attachments/855789623388798998/1095354954413256724/yftbvutg.png?width=475&height=62">
         </section>
-    <h1>Actualités du Stade Rennais Football Club</h1>
+    <h1>Allez le foot</h1>
     
     <br>
         <img class="imgn1" src="https://media.discordapp.net/attachments/855789623388798998/1095266389855588352/yH5BAEAAAAALAAAAAABAAEAAAIBRAA7.png?width=1191&height=670"/>
